Fixed the title

--- a/docs/create/aws/bidding-on-aws/index-bidding-on-aws.mdx
+++ b/docs/create/aws/bidding-on-aws/index-bidding-on-aws.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-bidding-on-aws
-title: How to Build a Real-Time Bidding Platform on AWS using NodeJS, AWS Lambda, and Redis
-sidebar_label: Building a Real-Time Bidding Platform on AWS using NodeJS, AWS Lambda, and Redis
+title: How to Build a Real-Time Bidding Platform using NodeJS, AWS Lambda and Redis
+sidebar_label: Building a Real-Time Bidding Platform using NodeJS, AWS Lambda and Redis
 slug: /create/aws/bidding-on-aws
 authors: [ajeet]
 ---
