Fixed the formatting

--- a/docs/explore/netlify/getting-started-with-netlify/index-getting-started-with-netlify.mdx
+++ b/docs/explore/netlify/getting-started-with-netlify/index-getting-started-with-netlify.mdx
@@ -25,7 +25,7 @@ Netlify helps developers to launch websites and campaigns in minutes with no-ops
 
 ![MyImages](netlifyimage.png)
 
-1. The developer writes a code and store it in a version control repository(say, GitHub)
+1. The developer writes a code and store it in a version control repository(say, GitHub).
 2. When a new change is merged into the master branch of GitHub repo, Github triggers a webhook that Netlify is listening for. 
 3. Netlify pulls the latest version of the app from GitHub and then start building the static version of the site
 4. Netlify then uses Plugins and internal code to make adjustments to your site, pre-render all of your pages in static HTML and improves it further
