Added a New Tutorial on Netlify + Redis Dev Hub Clone

--- a/docs/explore/netlify/getting-started-with-netlify/index-getting-started-with-netlify.mdx
+++ b/docs/explore/netlify/getting-started-with-netlify/index-getting-started-with-netlify.mdx
@@ -5,6 +5,7 @@ sidebar_label: Getting Started with Netlify
 slug: /explore/netlify/getting-started-with-netlify
 ---
 
+import RedisCard from '@site/src/theme/RedisCard';
 
 Netlify is a popular static site hosting serverless platform. It is a popular way to build, deploy, and scale modern web applications in a much more scalable and secure way.  
 
@@ -292,3 +293,13 @@ Site Id:      48d063c6-aa38-4bd3-9322-1669cec3daa9
 ### Try it Yourself
 
 [![Deploy to Netlify](https://www.netlify.com/img/deploy/button.svg)](https://app.netlify.com/start/deploy?repository=https://github.com/rainaajeet/simple-react-demo)
+
+<div class="row">
+ <div class="col">
+     <RedisCard
+        title="How to host Redis Developer Site Clone with Netlify in 5 Minutes"
+        description="Deploy Redis Developer Site Clone with Netlify in 5 Minutes"
+        page="/explore/netlify/deploy-redis-developersite-clone"
+        />
+ </div>
+</div>
