Modified Netlify app

--- a/docs/create/netlify/deploy-docusaurus-to-netlify/index-deploy-docusaurus-to-netlify.mdx
+++ b/docs/create/netlify/deploy-docusaurus-to-netlify/index-deploy-docusaurus-to-netlify.mdx
@@ -1,8 +1,8 @@
 ---
-id: index-deploy-redis-developersite-clone
-title: How to Deploy and Host Redis Developer Site Clone with Netlify in 5 Minutes
-sidebar_label: Deply and Host Redis Developer Site Clone with Netlify in 5 Minutes
-slug: /explore/netlify/deploy-redis-developersite-clone
+id: index-deploy-docusaurus-to-netlify
+title: How to Deploy Docusaurus to Netlify in 5 Minutes
+sidebar_label: Deploy Docusaurus to Netlify in 5 Minutes
+slug: /create/netlify/deploy-docusaurus-to-netlify
 ---
 
 import RedisCard from '@site/src/theme/RedisCard';
@@ -20,8 +20,8 @@ The Netlify platform allows developers to build and deploy their site to the glo
  <div class="col">
      <RedisCard
         title="How to get started with Netlify"
-        description="Learn how to deploy and host React app using Netlify "
-        page="/explore/netlify/getting-started-with-netlify"
+        description="Learn how to deploy and host Next.js app using Netlify "
+        page="/create/netlify/getting-started-with-netlify"
         />
  </div>
 </div>
