Added Netlify tutorial

--- a/docs/create/netlify/deploy-docusaurus-to-netlify/index-deploy-docusaurus-to-netlify.mdx
+++ b/docs/create/netlify/deploy-docusaurus-to-netlify/index-deploy-docusaurus-to-netlify.mdx
@@ -27,7 +27,8 @@ The Netlify platform allows developers to build and deploy their site to the glo
 </div>
 
 
-[In the last tutorial](/explore/netlify/getting-started-with-netlify), we leveraged [Netlify CLI](https://docs.netlify.com/cli/get-started/) to build a simple React application.Under this tutorial, you will see how to deploy and host Redis developer Hub clone using Netlify Dashboard UI in 5 minutes.
+[In the last tutorial](/explore/netlify/getting-started-with-netlify), we leveraged [Netlify CLI](https://docs.netlify.com/cli/get-started/) to build a simple Next.js application built using TailwindCSS and Redis .
+In this tutorial, you will see how to deploy a Docusaurus site to Netlify Dashboard UI in 5 minutes.
  
 Let's get started..
 
