--- a/docs/create/aws/analytics-using-aws/index-analytics-using-aws.mdx
+++ b/docs/create/aws/analytics-using-aws/index-analytics-using-aws.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-analytics-using-aws
-title: How to Build and Deploy Your Own Analytics Dashboard using NodeJS and Redis on AWS Platform 
+title: How to Build and Deploy Your Own Analytics Dashboard using NodeJS and Redis on the AWS Platform 
 sidebar_label: Building Analytics Dashboard using NodeJS, Redis and AWS
 slug: /create/aws/analytics-using-aws
 authors: [ajeet]
