--- a/docs/create/aws/index-aws.mdx
+++ b/docs/create/aws/index-aws.mdx
@@ -60,7 +60,7 @@ The following links provide you with the available options to run apps on Heroku
  <div class="row">
  <div class="col">
      <RedisCard
-        title="How to Build and Deploy Your Own Analytics Dashboard using NodeJS and Redis on AWS Platform"
+        title="How to Build and Deploy Your Own Analytics Dashboard using NodeJS and Redis on the AWS Platform"
         description="Learn how to Build and Deploy Your Own Analytics Dashboard using NodeJS, AWS Lambda and Redis"
         page="/create/aws/analytics-using-aws"
         />
