--- a/docs/create/aws/analytics-using-aws/index-analytics-using-aws.mdx
+++ b/docs/create/aws/analytics-using-aws/index-analytics-using-aws.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-analytics-using-aws
 title: How to Build and Deploy Your Own Analytics Dashboard using NodeJS and Redis on the AWS Platform 
-sidebar_label: Building Analytics Dashboard using NodeJS, Redis and AWS
+sidebar_label: Building an Analytics Dashboard using NodeJS, Redis and AWS
 slug: /create/aws/analytics-using-aws
 authors: [ajeet]
 ---
