--- a/docs/create/netlify/deploy-docusaurus-to-netlify/index-deploy-docusaurus-to-netlify.mdx
+++ b/docs/create/netlify/deploy-docusaurus-to-netlify/index-deploy-docusaurus-to-netlify.mdx
@@ -20,7 +20,7 @@ The Netlify platform allows developers to build and deploy their site to the glo
  <div class="col">
      <RedisCard
         title="How to get started with Netlify"
-        description="Learn how to deploy and host Next.js app using Netlify "
+        description="Learn how to deploy and host a Next.js app using Netlify "
         page="/create/netlify/getting-started-with-netlify"
         />
  </div>
