--- a/docs/create/netlify/deploy-docusaurus-to-netlify/index-deploy-docusaurus-to-netlify.mdx
+++ b/docs/create/netlify/deploy-docusaurus-to-netlify/index-deploy-docusaurus-to-netlify.mdx
@@ -76,7 +76,7 @@ Next, Netlify will allow you to import an existing project from a GitHub reposit
 ### Step 5. Configure site settings for Netlify 
 
 There are two essential settings that needs to be configured.
-First, change the URL under docusaurus.config.js to any other random URL as shown below:
+First, change the URL under `docusaurus.config.js` to any other random URL as shown below:
 
 ```javascript title="docusaurus.config.js"
 ....
