--- a/docs/create/netlify/deploy-docusaurus-to-netlify/index-deploy-docusaurus-to-netlify.mdx
+++ b/docs/create/netlify/deploy-docusaurus-to-netlify/index-deploy-docusaurus-to-netlify.mdx
@@ -102,7 +102,7 @@ Choose "Deploy site". If you are performing it for the second time, then choose 
 ![MyImage](images/netlify_sitedeploy-inprogress.png)
 
 
-Monitor the "Deploy Log" carefully to see if there is no serious error message appear in the log.
+Monitor the "Deploy Log" carefully to see if any error messages appear in the log.
 
 ![MyImage](images/netlify-deploylog.png)
 
