--- a/docs/create/netlify/deploy-docusaurus-to-netlify/index-deploy-docusaurus-to-netlify.mdx
+++ b/docs/create/netlify/deploy-docusaurus-to-netlify/index-deploy-docusaurus-to-netlify.mdx
@@ -106,7 +106,7 @@ Monitor the "Deploy Log" carefully to see if any error messages appear in the lo
 
 ![MyImage](images/netlify-deploylog.png)
 
-By now, you should be able to see your Docusaurus site hosted on port 3000.
+You should now be able to see your Docusaurus site hosted on port 3000.
 ![MyImage](images/netlify-success.png)
 
 ### Step 7. Visit your new Docusaurus site on Netlify
