--- a/docs/create/netlify/deploy-docusaurus-to-netlify/index-deploy-docusaurus-to-netlify.mdx
+++ b/docs/create/netlify/deploy-docusaurus-to-netlify/index-deploy-docusaurus-to-netlify.mdx
@@ -115,7 +115,7 @@ Go to "Sites" on the top navigation menu and click on the latest preview build.
 
 ![MyImage](images/netlify_clickpreview.png)
 
-You will able to see that Netlify upload sites assets to a content delivery network and makes your site available.
+You will able to see that Netlify uploads site assets to a content delivery network and makes your site available.
 ![MyImage](images/netlify_devhub.png)
 
 
