--- a/docs/create/netlify/deploy-docusaurus-to-netlify/index-deploy-docusaurus-to-netlify.mdx
+++ b/docs/create/netlify/deploy-docusaurus-to-netlify/index-deploy-docusaurus-to-netlify.mdx
@@ -45,7 +45,7 @@ Let's get started..
 
 ### Step 1. Sign-in for a new Netlify Account
 
-Visit [https://app.netlify.com/](https://app.netlify.com/) and sign in for Netlify account.
+Visit [https://app.netlify.com/](https://app.netlify.com/) and sign up for a Netlify account.
 
 ![MyImage](images/netlify-signin.png)
 
