--- a/docs/create/netlify/deploy-docusaurus-to-netlify/index-deploy-docusaurus-to-netlify.mdx
+++ b/docs/create/netlify/deploy-docusaurus-to-netlify/index-deploy-docusaurus-to-netlify.mdx
@@ -51,7 +51,7 @@ Visit [https://app.netlify.com/](https://app.netlify.com/) and sign up for a Net
 
 ### Step 2. Connect your Netlify account to your Git Provider
 
-Netlify provides you to sign-in using various ways - GitHub, GitLab, Bitbucket, Email and SSO.
+Netlify allows you to sign-in using various services, including GitHub, GitLab, Bitbucket, Email and SSO.
 For this demo we'll use GitHub. Sign into GitHub to connect it to Netlify.
 
 It will ask you for two-factor authentication.
