Fixed the Netlify Image

--- a/docs/create/netlify/getting-started-with-netlify/index-getting-started-with-netlify.mdx
+++ b/docs/create/netlify/getting-started-with-netlify/index-getting-started-with-netlify.mdx
@@ -11,7 +11,7 @@ Netlify is a popular static site hosting serverless platform. It is a popular wa
 
 Netlify helps developers to launch websites and campaigns in minutes with no fuss. Netlify is built primarily for JAMstack sites, which unify JavaScript and APIs to allow applications that are well suited for both developers and content editors.
 
-![Register](recloud_1.png)
+![netlify](netlify.png)
 
 ### Features of Netlify
 
