Added RedisInsight Tutorial

--- a/docs/explore/redisinsightv2/index-redisinsightv2.mdx
+++ b/docs/explore/redisinsightv2/index-redisinsightv2.mdx
@@ -35,6 +35,13 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
         />
  </div>
 
+ <div class="col">
+     <RedisCard
+        title="How To Use The RedisInsight Profiler Tool"
+        description="Analyze Your Redis Commands Using The Monitor Command"
+        page="/explore/redisinsightv2/profiler"
+        />
+ </div>
 
 </div>
 
