Added tutorial for Vercel

--- a/docs/create/netlify/getting-started-with-netlify/index-getting-started-with-netlify.mdx
+++ b/docs/create/netlify/getting-started-with-netlify/index-getting-started-with-netlify.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-getting-started-with-netlify
-title: Getting Started with Netlify
-sidebar_label: Getting Started with Netlify
+title: Getting Started with Netlify and Redis
+sidebar_label: Getting Started with Netlify and Redis
 slug: /create/netlify/getting-started-with-netlify
 ---
 
