--- a/docs/create/vercel/index-vercel.mdx
+++ b/docs/create/vercel/index-vercel.mdx
@@ -11,7 +11,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 Vercel is the preferred platform to host [Next.js-based web applications](https://vercel.com/docs/concepts/next.js/overview). It allows you to deploy serverless functions that take an HTTP request and provide a response. You can use [serverless functions](https://vercel.com/docs/concepts/functions/serverless-functions) to handle user authentication, form submission, database queries, custom Slack commands, and more.
 
-Vercel integrates well with popular tools, such as [GitHub](https://vercel.com/docs/concepts/git/vercel-for-github), [GitLab,](https://vercel.com/docs/concepts/git/vercel-for-gitlab) [Lighthouse](https://vercel.com/integrations/lighthouse), [Doppler](https://vercel.com/integrations/doppler), and [Divjoy](https://divjoy.com/). NodeJS, Go, Python, and Ruby are the leading [official runtimes supported by Vercel](https://vercel.com/docs/runtimes).
+Vercel integrates well with popular tools, such as [GitHub](https://vercel.com/docs/concepts/git/vercel-for-github), [GitLab](https://vercel.com/docs/concepts/git/vercel-for-gitlab), [Lighthouse](https://vercel.com/integrations/lighthouse), [Doppler](https://vercel.com/integrations/doppler), and [Divjoy](https://divjoy.com/). NodeJS, Go, Python, and Ruby are the leading [official runtimes supported by Vercel](https://vercel.com/docs/runtimes).
 
 
 ![alt_text](images/vercel1.png "image_tooltip")
