--- a/docs/create/vercel/index-vercel.mdx
+++ b/docs/create/vercel/index-vercel.mdx
@@ -86,7 +86,7 @@ Once Vercel gets connected to your GitHub account, it displays your public repos
 
 ### Step 4. Clone the GitHub repository
 
-The complete source code of Redis Chat application is hosted [here](https://github.com/redis-developer/basic-redis-chat-app-demo-nodejs). React and Socket.IO is used for building the frontend while Node.js and Redis powers the backend. Redis is used mainly as a database to keep the user/messages data and for sending messages between connected servers.
+The complete source code of the Redis Chat application is hosted [here](https://github.com/redis-developer/basic-redis-chat-app-demo-nodejs). React and Socket.IO are used for building the frontend while Node.js and Redis power the backend. Redis is used mainly as a database to keep the user/messages data and for sending messages between connected servers.
 
 ```
 git clone https://github.com/redis-developer/basic-redis-chat-app-demo-nodejs
