--- a/docs/create/vercel/index-vercel.mdx
+++ b/docs/create/vercel/index-vercel.mdx
@@ -95,7 +95,7 @@ git clone https://github.com/redis-developer/basic-redis-chat-app-demo-nodejs
 
 ### Step 5. Create a vercel.json for Node.js app
 
-If you run ```vercel init``` command, it will list various framework but you won’t be able to find Node.js, hence you will need to create a ```vercel.json``` file as shown below:
+If you run the ```vercel init``` command, it will list various frameworks but you won’t be able to find Node.js, hence you will need to create a ```vercel.json``` file as shown below:
 
 
 ```
